# buildsystem-hw4

./: CMakeLists.txt  create_map.py  main.cpp  main2.cpp  map.h
way1/: CMakeLists.txt  main.cpp
way2/: CMakeLists.txt  create_map.py  main.cpp  main2.cpp  map.h
